fix: update loader styles and correct HTML structure
- Increased max-width of loader content for better visibility.
- Fixed HTML structure by removing duplicate closing tags.

--- a/invoiceSummary.html
+++ b/invoiceSummary.html
@@ -251,7 +251,9 @@
                 <span>Generating recommendations...</span>
                 <span class="detail-percentage">0%</span>
               </div>
+
             </div>
+
           </div>
           <div class="loader-progress">
             <div class="progress-track">
@@ -1526,4 +1528,6 @@
   <script src="src/js/invoiceSummary.js"></script>
 </body>
 
+</html>
+</html>
 </html>
