feat: add Top Headlines section with dynamic content and close functionality
- Introduced a new Top Headlines section in index.html to display important updates and alerts.
- Implemented CSS styles for the headlines section, including animations and responsive design.
- Added JavaScript functionality to manage the visibility of the headlines section and handle close button interactions.

--- a/index.html
+++ b/index.html
@@ -182,6 +182,52 @@
         </div>
       </header>
 
+      <!-- Top Headlines Section -->
+      <div class="top-headlines" id="topHeadlines">
+        <div class="headlines-container">
+          <div class="headlines-content">
+            <div class="headlines-icon">
+              <i class="bi bi-megaphone"></i>
+            </div>
+            <div class="headlines-text">
+              <div class="headlines-title">Top Headlines</div>
+              <div class="headlines-marquee">
+                <div class="marquee-content">
+                  <div class="headline-item">
+                    <span class="headline-badge">New</span>
+                    <span class="headline-text">System maintenance scheduled for March 15th, 2024</span>
+                  </div>
+                  <div class="headline-item">
+                    <span class="headline-badge">Update</span>
+                    <span class="headline-text">New features added to Invoice Summary dashboard</span>
+                  </div>
+                  <div class="headline-item">
+                    <span class="headline-badge">Alert</span>
+                    <span class="headline-text">Please update your profile information</span>
+                  </div>
+                  <!-- Duplicate items for seamless loop -->
+                  <div class="headline-item">
+                    <span class="headline-badge">New</span>
+                    <span class="headline-text">System maintenance scheduled for March 15th, 2024</span>
+                  </div>
+                  <div class="headline-item">
+                    <span class="headline-badge">Update</span>
+                    <span class="headline-text">New features added to Invoice Summary dashboard</span>
+                  </div>
+                  <div class="headline-item">
+                    <span class="headline-badge">Alert</span>
+                    <span class="headline-text">Please update your profile information</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="headlines-close" id="headlinesClose">
+            <i class="bi bi-x"></i>
+          </button>
+        </div>
+      </div>
+
       <!-- Dashboard Content -->
       <div class="content">
         <!-- Summary Section -->
