style: add comprehensive styles for action popup modal
- Introduced new CSS styles for the action popup modal, enhancing its appearance and responsiveness.
- Added styles for modal backdrop, popup container, title, list, and close button with hover effects.
- Ensured mobile responsiveness with media queries for improved usability on smaller screens.

--- a/index.html
+++ b/index.html
@@ -607,11 +607,11 @@
       <div class="modal-title">Following Items need your immediate action</div>
       <ul class="modal-list">
         <li>
-          5 Shop Visits worth ~$12M Rev will be upcoming for generating the Invoice<br>
+          5 Shop Visits worth ~$12M Rev will be upcoming for generating the Invoice
           <span class="modal-list-detail">[1-Initial, 1- Progressive, 3-Actual]</span>
         </li>
         <li>
-          2 Shop Visits worth ~$7M Rev became past due for generating the Invoice<br>
+          2 Shop Visits worth ~$7M Rev became past due for generating the Invoice
           <span class="modal-list-detail">[0-Initial, 2-Actual]</span>
         </li>
       </ul>
