feat: update registration form in login.html
- Replaced first and last name fields with a single username input for streamlined registration.
- Added a shop selection dropdown to allow users to choose their preferred shop during registration.

--- a/login.html
+++ b/login.html
@@ -428,15 +428,9 @@
 
             <!-- Registration Form -->
             <form id="registerForm" class="form-section">
-                <div class="form-row">
-                    <div class="form-group">
-                        <label class="form-label">First Name</label>
-                        <input type="text" class="form-input" placeholder="John" required>
-                    </div>
-                    <div class="form-group">
-                        <label class="form-label">Last Name</label>
-                        <input type="text" class="form-input" placeholder="Doe" required>
-                    </div>
+                <div class="form-group">
+                    <label class="form-label">Username</label>
+                    <input type="text" class="form-input" placeholder="Enter your username" required>
                 </div>
                 <div class="form-group">
                     <label class="form-label">Email</label>
@@ -463,6 +457,10 @@
                             <span>Special char</span>
                         </div>
                     </div>
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Shop</label>
+                    <input type="text" class="form-input" placeholder="Enter shop name" required>
                 </div>
                 <div class="terms-check">
                     <input type="checkbox" id="terms" required>
