--- a/login.html
+++ b/login.html
@@ -460,7 +460,12 @@
                 </div>
                 <div class="form-group">
                     <label class="form-label">Shop</label>
-                    <input type="text" class="form-input" placeholder="Enter shop name" required>
+                    <select class="form-input" required>
+                        <option value="">Select a shop</option>
+                        <option value="shop1">Shop 1</option>
+                        <option value="shop2">Shop 2</option>
+                        <option value="shop3">Shop 3</option>
+                    </select>
                 </div>
                 <div class="terms-check">
                     <input type="checkbox" id="terms" required>
