--- a/login.html
+++ b/login.html
@@ -37,9 +37,9 @@
         .left-section {
             flex: 1;
             background:
-                linear-gradient(135deg, #dc3545 0%, #4f46e5 100%),
+                linear-gradient(135deg, rgba(220,53,69,0.92) 0%, rgba(79,70,229,0.92) 100%),
                 url('src/assets/aero1.jpg') center center / cover no-repeat;
-            background-blend-mode: overlay;
+            background-blend-mode: hard-light;
             padding: 2rem;
             display: flex;
             flex-direction: column;
