--- a/shop.html
+++ b/shop.html
@@ -439,7 +439,6 @@
                         <th>Past Due</th>
                         <th>Upcoming</th>
                         <th>No Due</th>
-                        <th>Actions</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -466,24 +465,28 @@
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-badge danger">2</span>
+                            <div class="d-flex align-items-center gap-2">
+                              <span class="highlight-esn">2</span>
+                              <button class="btn btn-sm btn-primary proceed-btn" data-bs-toggle="tooltip" data-bs-title="View past due details">
+                                <i class="bi bi-arrow-right"></i>
+                              </button>
+                            </div>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-badge warning">5</span>
+                            <div class="d-flex align-items-center gap-2">
+                              <span class="highlight-esn">5</span>
+                              <button class="btn btn-sm btn-primary proceed-btn" data-bs-toggle="tooltip" data-bs-title="View upcoming details">
+                                <i class="bi bi-arrow-right"></i>
+                              </button>
+                            </div>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
                             <span class="status-badge success">20</span>
                           </div>
-                        </td>
-                        <td>
-                          <a href="#" class="view-details-btn" data-bs-toggle="tooltip" data-bs-title="View detailed information about this shop">
-                            <i class="bi bi-arrow-right-circle"></i>
-                            View Details
-                          </a>
                         </td>
                       </tr>
                     </tbody>
@@ -518,7 +521,6 @@
                         <th>Past Due</th>
                         <th>Upcoming</th>
                         <th>No Due</th>
-                        <th>Actions</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -545,24 +547,28 @@
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-badge danger">0</span>
+                            <div class="d-flex align-items-center gap-2">
+                              <span class="highlight-esn">0</span>
+                              <button class="btn btn-sm btn-primary proceed-btn" data-bs-toggle="tooltip" data-bs-title="View past due details">
+                                <i class="bi bi-arrow-right"></i>
+                              </button>
+                            </div>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-badge warning">3</span>
+                            <div class="d-flex align-items-center gap-2">
+                              <span class="highlight-esn">3</span>
+                              <button class="btn btn-sm btn-primary proceed-btn" data-bs-toggle="tooltip" data-bs-title="View upcoming details">
+                                <i class="bi bi-arrow-right"></i>
+                              </button>
+                            </div>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
                             <span class="status-badge success">13</span>
                           </div>
-                        </td>
-                        <td>
-                          <a href="#" class="view-details-btn" data-bs-toggle="tooltip" data-bs-title="View detailed information about this shop">
-                            <i class="bi bi-arrow-right-circle"></i>
-                            View Details
-                          </a>
                         </td>
                       </tr>
                       <tr>
@@ -588,24 +594,28 @@
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-badge danger">2</span>
+                            <div class="d-flex align-items-center gap-2">
+                              <span class="highlight-esn">2</span>
+                              <button class="btn btn-sm btn-primary proceed-btn" data-bs-toggle="tooltip" data-bs-title="View past due details">
+                                <i class="bi bi-arrow-right"></i>
+                              </button>
+                            </div>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-badge warning">5</span>
+                            <div class="d-flex align-items-center gap-2">
+                              <span class="highlight-esn">5</span>
+                              <button class="btn btn-sm btn-primary proceed-btn" data-bs-toggle="tooltip" data-bs-title="View upcoming details">
+                                <i class="bi bi-arrow-right"></i>
+                              </button>
+                            </div>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
                             <span class="status-badge success">20</span>
                           </div>
-                        </td>
-                        <td>
-                          <a href="#" class="view-details-btn" data-bs-toggle="tooltip" data-bs-title="View detailed information about this shop">
-                            <i class="bi bi-arrow-right-circle"></i>
-                            View Details
-                          </a>
                         </td>
                       </tr>
                       <tr>
@@ -631,24 +641,28 @@
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-badge danger">1</span>
+                            <div class="d-flex align-items-center gap-2">
+                              <span class="highlight-esn">1</span>
+                              <button class="btn btn-sm btn-primary proceed-btn" data-bs-toggle="tooltip" data-bs-title="View past due details">
+                                <i class="bi bi-arrow-right"></i>
+                              </button>
+                            </div>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
-                            <span class="status-badge warning">0</span>
+                            <div class="d-flex align-items-center gap-2">
+                              <span class="highlight-esn">0</span>
+                              <button class="btn btn-sm btn-primary proceed-btn" data-bs-toggle="tooltip" data-bs-title="View upcoming details">
+                                <i class="bi bi-arrow-right"></i>
+                              </button>
+                            </div>
                           </div>
                         </td>
                         <td>
                           <div class="status-cell">
                             <span class="status-badge success">15</span>
                           </div>
-                        </td>
-                        <td>
-                          <a href="#" class="view-details-btn" data-bs-toggle="tooltip" data-bs-title="View detailed information about this shop">
-                            <i class="bi bi-arrow-right-circle"></i>
-                            View Details
-                          </a>
                         </td>
                       </tr>
                       <tr class="table-active">
@@ -681,7 +695,6 @@
                             <span class="status-badge success fw-bold">48</span>
                           </div>
                         </td>
-                        <td></td>
                       </tr>
                     </tbody>
                   </table>
