--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
             background:
                 linear-gradient(135deg, rgba(220,53,69,0.92) 0%, rgba(79,70,229,0.92) 100%),
                 url('src/assets/aero1.jpg') center center / cover no-repeat;
-            background-blend-mode: hard-light;
+            /* background-blend-mode: hard-light; */
             padding: 2rem;
             display: flex;
             flex-direction: column;
@@ -136,7 +136,7 @@
         }
 
         .logo {
-            height: 40px;
+            height: 50px;
             width: auto;
         }
 
